[package]
name = "stn"
version = "0.1.2"
authors = [""]
edition = "2018"
default-run = "stn"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true

[[example]]
name = "tmp"
path = "example/tmp.rs"

[dependencies]
# parse json
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

async-trait = "0.1"

lazy_static = "1.4.0" # global value

dashmap = "4.0" # replace RwLock<HashMap<K, V, S>>
parking_lot = "0.11" # replace Mutex & RwLock

# route match
regex = "1.4"
aho-corasick = "0.7"
treebitmap = "0.4" 

# network
socket2 = { version = "0.4", features = ["all"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"

log4rs = "0.13"
log = "0.4"
 
# big/little endian
bytes = "1"

# dns
trust-dns-proto = { version = "0.20", default-features = false }
lru = "0.6"

# check domain valid
addr = "0.14"

cfg-if = "1.0"

[target.'cfg(any(target_os = "linux", target_os = "android"))'.dependencies]
libc = "0.2"
pnet = "0.27"

[target.'cfg(target_os = "linux")'.dependencies]
resolv-conf = "0.7"

[target.'cfg(target_os = "windows")'.dependencies]
ipconfig = "0.2"

[dev-dependencies]
rand = "0.8"
pretty-hex = "0.2"

[features]
default = ["private"]
private = []
