[package]
name = "stn"
version = "0.1.4"
authors = [""]
edition = "2018"
default-run = "stn"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[example]]
name = "tmp"
path = "./example/tmp.rs"

[dependencies]
# configuration
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
json_comments = "0.2"

async-trait = "0.1"
lazy_static = "1.4.0"
cfg-if = "1.0"

# replace RwLock<HashMap<K, V, S>>
dashmap = "4.0"
# replace Mutex & RwLock
parking_lot = "0.11"

# route match
regex = "1.4"
aho-corasick = "0.7"
treebitmap = "0.4" 

# network
socket2 = { version = "0.4", features = ["all"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"

log4rs = "1.0"
log = "0.4"

# big/little endian
bytes = "1"

# used in Future
pin-project = "1.0"

# dns
trust-dns-proto = { version = "0.20", default-features = false }
lru = "0.6"

# stn_base = { version = "*", path = "../stn_base" }
# stn_dns = { version = "*", path = "../stn_dns" }
# stn_http_proxy_client = { version = "*", path = "../stn_http_proxy_client" }
stn_http_proxy_server = { version = "*", path = "../stn_http_proxy_server" }
# stn_socks_client = { version = "*", path = "../stn_socks_client" }
# stn_socks_server = { version = "*", path = "../stn_socks_server" }
stn_buf = { version = "*", path = "../stn_buf" }

[target.'cfg(any(target_os = "linux", target_os = "android"))'.dependencies]
libc = "0.2"
stn_tun = { version = "*", path = "../stn_tun" }
stn_tproxy = { version = "*", path = "../stn_tproxy" }

[target.'cfg(target_os = "linux")'.dependencies]
resolv-conf = "0.7"

[target.'cfg(target_os = "windows")'.dependencies]
ipconfig = "0.2"

[dev-dependencies]
rand = "0.8"
pretty-hex = "0.2"

[features]
default = ["private"]
private = []
